Fix #876 event description overflow
also fixes overflow for event title in dashboard invitations

--- a/css/content.css
+++ b/css/content.css
@@ -83,8 +83,10 @@ input, textarea, select, option {
   font-size: 13px;
 }
 
+.event-description,
 .activity_feed_content_info p {
   margin: 0;
+  overflow-wrap: break-word;
 }
 
 .activity_feed_content_text {
